# rapidriteros

./: .gitignore  README.md  TODO.md  disco.json  disco.json.bkp  worker.py
_server-files/: etc--netplan--50-cloud-init.yaml
renderers/: udp.py
renderers/_osc/: README.md  requirements.txt
renderers/image/: Dockerfile  image.py
renderers/noise/: Dockerfile  noise.py
renderers/osc/: Dockerfile  osc.py  requirements.txt
renderers/p5/: Dockerfile  p5.py
renderers/p5/examples/: bouncingball.js  russ-droste.js
renderers/p5/subrenderer/: blob.js  offline-canvas-p5.js  package-lock.json  package.json  tmp-p5-program.js  tmp-p5-russ.js
renderers/shader/: Dockerfile  requirements.txt  shader.py
renderers/shader-glsl-viewer-abandoned/: Dockerfile  build_glslviewer.sh  shader.py
renderers/shader/subrenderer/: package-lock.json  package.json  shader-nogl-renderer.js
renderers/text/: Dockerfile  README.md  text.py
renderers/udp/: Dockerfile  README.md  requirements.txt
renderers/udp/.devcontainer/: devcontainer.json
renderers/wasm/: Cargo.toml  Dockerfile
renderers/wasm/src/: main.rs
web/: .env.example  Dockerfile  README.md  README.orig.md  disco.json  requirements.txt  server.py
web---original/: .env.example  Dockerfile  manage.py  requirements.txt
web---original/core/: models.py  views.py
web---original/rapidriter/: settings.py
web.BKP/: README.md  server.py
web/core/: admin.py  models.py  urls.py  views.py
web/rapidriter/: asgi.py  settings.py  urls.py  wsgi.py
worker/: .env.example  Dockerfile  README.md  requirements.txt  worker.py
(+36 files in other folders)
