[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
wasmer = "5.0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.7"
futures = "0.3.31"
tokio-stream = "0.1.16"
serde = { version = "1.0.214", features = ["derive"] }
async-stream = "0.3.6"
futures-util = "0.3.31"
base64 = "0.22.1"
